# computational-physics

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
data/: README.md
docs/: 1_closed_shell_hartree_fock.md  1_hartree_fock.md
inputs/: h2o.txt
source/: minimization.py  parameters.py
source/c/: gto.c
source/hartree_fock/: __init__.py  analysis.py  base.py  basis_sets.py  gto.py
source/hf/: __init__.py  atom.py  molecule.py  sto_ng.py
source/hfc/: atom.c  atom.h  basis_stog.c  basis_stog.h  gto.c  gto.dylib  hfc  libdiff.h  libint.c  libint.h  molecule.c  molecule.h
source/hfp/: atom.py  basis_stog.py  molecule.py
source/md/: calculus.py  potentials.py
src-c/: Makefile  README.md
src-c/hf/: hf
src-c/hf/include/: atom.h  basis_stog.h  libint.h  molecule.h  tensor.h
src-c/hf/src/: atom.c  basis_stog.c  cli.c  libint.c  main.c  molecule.c  tensor.c
src-c/tests/: Makefile  README.md  SUMMARY.md  test_atom.c  test_basis.c  test_integrals.c  test_tensor.c
src-python/: README.md  pyproject.toml
src-python/hf/: __init__.py  analysis.py  atom.py  basis_stog.py  chebyshev.py  cli.py  molecule.py  plot.py
src-python/tests/: conftest.py
src-python/tests/hf/: test_kinetic.py  test_nuclear.py  test_overlap.py  test_repulsion.py  test_scf.py
src-rust/: Cargo.toml  TESTING.md
src-rust/src/: lib.rs  main.rs
src-rust/src/hf/: atom.rs  basis_stog.rs  mod.rs  molecule.rs
src-rust/tests/: README.md  test_integration.rs  test_kinetic.rs  test_nuclear.rs  test_overlap.rs  test_repulsion.rs  test_scf.rs
theory/: 1_closed_shell_hartree_fock.md
