[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comp-physics"
version = "0.1.0"
description = "Computational physics tools for quantum chemistry and molecular dynamics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "pandas",
    "ipykernel",
    "pydantic",
    "plotly",
    "nbformat",
    "basis-set-exchange",
    "mendeleev",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src-python"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.csv", "*.xyz"]
